  - high-resolution terrain renderer (Android/Linux only)
  - kinetic panning (Android/Linux only)
* calculations
  - don't detect landing while climbing in a wave (#1330, #2289, #2406)
  - basic support for the contest "DMSt" (#2208)
* tasks
  - add task start countdown (#136, #1080)
  - optimise racing tasks for minimum distance
  - allow observation zone sizes up to 200km (#2401)
* devices
  - LX: support flight download from LXNAV Nano (#2085)
  - LX: read bugs setting from the LX160 vario (#2167)
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
  - Android/IOIO: support MS5611 pressure sensor
  - added driver for Levil AHRS device
  - Leonardo: read indicated airspeed from PDGFTL1 sentence
  - C-Probe: read IAS/TAS from the device
* data files
  - added MATZ airspace class (#2530)
* logger
  - auto-flush IGC logger after every fix
* user interface
  - preselect first item with details in map item list for
    faster access (#2069, #2207)
  - non-modal FLARM radar (with InfoBoxes and menu)
  - show FAI triangle sectors in task manager
  - can drag modal dialogs
  - short click opens InfoBox dialog
  - support keyboard input on desktop computer
  - improved angle input (e.g. wind direction, sector radials)
  - faster map initialisation during startup
  - reduce audio vario latency
  - better bold fonts on Linux
* infoboxes
  - added thermal assistant infobox
  - inverse colors for wind arrow infobox and flarm gauge (#2337)
* track friends via internet connection (SkyLines live tracking)
* Documentation
  - started a French translation of the manual
  - included an almost complete German translation of the manual

Version 6.4.6 - not yet released
* devices
  - Leonardo: fixed vario parser for the $c sentence
  - C-Probe: fixed temperature offset bug
  - GTAltimeter: fixed vario parser
  - SerialPort: fixed lockup/hang problem when closing for some CE devices (#2515)
* user interface
  - sort airspaces properly in the airspace list dialog (#2528)
* infoboxes